--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,3 +19,9 @@ collections:
           fields: 
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
+- label: "Blog"
+  name: "posts"
+  folder: "_posts"
+  fields:
+    - {label: "Title", name: "title", widget: "string"}
+    - {label: "Content", name: "body", widget: "markdown"}
